force-app/main/default/objects/Asset__c.object
<CustomObject>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Contact1</label>
        <referenceTo>Contact1__c</referenceTo>
        <relationshipLabel>Assets</relationshipLabel>
        <relationshipName>Assets</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Purchase_Date__c</fullName>
        <label>Purchase Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Resource__c</fullName>
        <label>Resource</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Serial_Number__c</fullName>
        <displayFormat>SN-{0000}</displayFormat>
        <label>Serial Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Available</fullName>
                </value>
                <value>
                    <fullName>Not available</fullName>
                </value>
                <value>
                    <fullName>On hold</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Asset</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>IT Asset Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Assets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>